# financial-pattern-recognition

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  CMakeProject1.cpp
src/io/: csvreader.cpp  csvreader.h
src/math/: math.cpp  math.h
src/numerics/: stock.cpp  stock.h
src/patterns/: patterns.cpp  patterns.h
src/visuals/: chart.cpp  chart.h
